--- a/src/components/common/VideoCall.css
+++ b/src/components/common/VideoCall.css
@@ -10,7 +10,7 @@
 
 .video-grid {
     display: grid;
-    grid-template-columns: 1fr 300px;
+    grid-template-rows: 1fr 200px;
     gap: 20px;
     height: calc(100% - 100px);
 }
@@ -25,11 +25,13 @@
 }
 
 .video-wrapper.remote {
-    grid-column: 1;
+    grid-row: 1;
+    width: 100%;
 }
 
 .video-wrapper.local {
-    grid-column: 2;
+    grid-row: 2;
+    width: 100%;
 }
 
 .remote-video,
